# Star

./: .clang-format  .gitignore  CMakeLists.txt  Index.hpp  LICENSE  __erim_namespace.h  link.hpp  macro_for_each.hpp  macro_for_each_100.hpp  main.cpp  star.hpp
includes/: macro_for_each.h  macros.hpp  table.hpp  tables.hpp
src/: table.cpp
src/star/: main.cpp
